fix(DropdownLayout): remove line-height from options in material design
since introduction of wrapped options, this line-height yields multiple
scrollbars

--- a/src/DropdownLayout/DropdownLayout.scss
+++ b/src/DropdownLayout/DropdownLayout.scss
@@ -240,7 +240,6 @@ a[data-hook=link-item] {
       }
       .option {
         min-height: 36px;
-        line-height: 36px;
         font-size: 15px;
         color: $D30;
       }
